Fix textarea not stretching to full height if not full

--- a/www/style.css
+++ b/www/style.css
@@ -33,6 +33,7 @@ body {
 	width: 100%;
 	box-sizing: border-box;
 	overflow: hidden;
+	height: inherit;
 }
 
 #code > * {
